export class Bronce extends Categoria{
    
    costo
    refNecesarios = 0
    cantinscriptos
    

    multiplicadorChances(){
     return 2
    }
}