export class Calculadora{
   
    probabilidadGanar(Participante){

   }

}
