export class Categoria{
    
    costo
    refNecesarios
    inscriptos
    

    multiplicadorChances(){
         }
} 