export class Oro extends Categoria{
    
    costo 
    refNecesarios = 200
    inscriptos
    

    multiplicadorChances(){
         return 5
    }
}