export class Plata extends Categoria{
    
    costo
    refNecesarios = 50
    inscriptos
    

    multiplicadorChances(){
    return 3    
    }
}