export class Referido{ 
    constructor(nombre, dni, email){
        this.nombre = nombre;
        this.dni = dni;
        this.email = email;
    }
    nombre
    dni
    mail
    invitacion
    fechaDeAceptacion
    participante
  aceptarInvitacion(){

  }
}
